attempting to fix about page on mobile by removing align-items:center

--- a/web/ui/static/css/about.css
+++ b/web/ui/static/css/about.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
-    align-items: center;
     margin: auto;
     width: 50%;
     font-family: "Trebuchet MS", sans-serif;
